--- a/css/styles.css
+++ b/css/styles.css
@@ -134,11 +134,11 @@ a:visited {
 }
 
 #safa-andac-card {
-  background-image: url('https://i.imgur.com/JB1s1BD');
+  background-image: url('https://i.imgur.com/JB1s1BD.jpg');
 }
 
 #safa-andac-cover {
-  background-image: url('https://i.imgur.com/D6vhvMK');
+  background-image: url('https://i.imgur.com/D6vhvMK.jpg');
 }
 
 #joe-burgess-card {
